--- a/DbGui/Views/MainWindow.xaml
+++ b/DbGui/Views/MainWindow.xaml
@@ -3,10 +3,17 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:System="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:DbGui"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
-    </Grid>
+        Title="MainWindow" Height="450" Width="800"
+        WindowStyle="None"
+        AllowsTransparency="True"
+        Opacity="0.95">
+    
+    <Window.Background>
+        <SolidColorBrush Color="#222831"></SolidColorBrush>
+    </Window.Background>
+    
+    <Frame Source="StartPage.xaml"></Frame>
 </Window>
