--- a/DbGui/Views/StartPage.xaml
+++ b/DbGui/Views/StartPage.xaml
@@ -5,8 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:DbGui.Views"
       mc:Ignorable="d"
-      Title="StartPage" Height="450" Width="800">
-    <Grid>
+      Title="StartPage" Height="Auto" Width="Auto">
+    <Grid Margin="20, 0">
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
